# openghg

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  NOTES  README.md  TODO  acknowledgements.html  azure-pipelines.yaml  azure-pipelines.yml  changelog.html  codecov.yml  conftest.py  contributing.html  create_server.txt  development.html  devsupport.html  environment-dev.yaml  environment.yaml  environment.yml  features.html  genindex.html  index.html  install.html  localuse.html  mypy.ini  objects.inv  packaging.html  py-modindex.html  pyproject.toml  reduce_data.py  requirements-dev.txt  requirements-doc.txt  requirements-server.txt  requirements.txt  (+12 more)
.github/: copilot-instructions.md  copilot.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.yaml  code_retreat_dec22.yml  config.yaml  new_feature.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build_documentation.yaml  build_workflow.yaml  conda.yaml  conda_build.yaml  conda_workflow.yaml  main.yaml  publish.yaml  pypi_release.yaml  python-package.yml  release_pypi.yaml  testing.yaml  workflow.yaml
HUGS/: __init__.py
HUGS/Cache/: __init__.py  _cache.py
HUGS/Client/: __init__.py  _cleardatasources.py  _goodbye.py  _hello.py  _jobrunner.py  _listobjects.py  _process.py  _rank_sources.py  _removeobjects.py  _retrieve.py  _search.py  _status.py  _upload.py
HUGS/Data/: acrg_site_info.json  acrg_with_locations.json  attributes.json  ceda_compliance.json  icos_eurocom_sites.json  lghg_sites.json  process_gcwerks_parameters.json  site_codes.json
HUGS/Interface/: __init__.py  _complete.py  _credentials.py  _date_selector_plot.py  _download.py  _interface.py  _notebook.py  _parse.py  _plot.py  _search.py  _search2.py  _upload.py  _voilainterface.py  _vueinterface.py  search3.py
HUGS/Jobs/: __init__.py  _connect.py  _create.py  _drive.py  _jobdrive.py  _run.py
HUGS/LocalClient/: __init__.py  _get_observations.py  _process.py  _rank_sources.py  _search.py
HUGS/Modules/: _Cranfield_CRDS.py  __init__.py  _base.py  _cranfield.py  _crds.py  _datasource.py  _datastruct.py  _eurocom.py  _footprint.py  _gc.py  _gcwerks.py  _icos.py  _icos_temp.py  _instrument.py  _lookup.py  _network.py  _noaa.py  _obs_surface.py  _site.py  _template.py  _thamesbarrier.py  _util.py
HUGS/ObjectStore/: __init__.py  _hugs_objstore.py  _local_bucket.py  _local_store.py
HUGS/Processing/: __init__.py  _acrg_attributes.py  _attributes.py  _ceda.py  _enums.py  _export.py  _metadata.py  _paths.py  _process.py  _rank_sources.py  _recombination.py  _search.py  _segment.py
HUGS/Service/: __init__.py  _hugs_service.py
HUGS/User/: __init__.py  _login.py
HUGS/Util/: __init__.py  _util.py
HUGS/acrg_codes/: process_gcwerks.py  process_misc.py
_modules/: index.html
_sources/: changelog.rst.txt  contributing.rst.txt  devsupport.rst.txt  features.rst.txt  index.rst.txt  install.rst.txt  packaging.rst.txt  roadmap.rst.txt  support.rst.txt  usage.rst.txt  why-openghg.rst.txt
_sources/api/: api_dataobjects.rst.txt  api_objectstore.rst.txt  api_plotting.rst.txt  api_processing.rst.txt  api_retrieve.rst.txt  api_standardise.rst.txt  api_store.rst.txt  api_types.rst.txt  (+7 more)
_static/: documentation_options.js
api/: api_analyse.html  api_client.html  api_dataobjects.html  api_jobs.html  api_localclient.html  api_modules.html  api_objectstore.html  api_plotting.html  api_processing.html  api_retrieve.html  api_standardise.html  api_store.html  api_transform.html  api_tutorial.html  api_types.html  api_util.html  devapi_cloud.html  devapi_dataobjects.html  devapi_metadata.html  devapi_modules.html  devapi_objectstore.html  devapi_retrieve.html  devapi_standardise.html  devapi_store.html  devapi_types.html  devapi_util.html  index.html  index_devapi.html
ceda_comp/: instrument_metadata_example.yaml  station-data_metadata_bilsdale_crds.yaml  station-data_metadata_bilsdale_ecd_248m.yaml  station-data_metadata_example.yaml  test.yaml  test_bsd.yaml  yaml_handling.py
data_processing/: TODO  _datasource.py  _instrument.py  _network.py  _search.py  _site.py  data_splitting.py  data_upload.py  get_metadata.py  hugs_objstore.py  local_bucket.py  process_crds.py  process_gcwerks.py  query_objstore.py  segment_data.py  test_bucket.py  test_obs_calling_process_fns.py  utils.py
demo/: Demo.ipynb  setup.sh
development/: fn_devel.html  fn_setup.html  fn_usage.html  index_devel.html  packaging.html  python_devel.html  quickstart_devel.html
diagrams/: .gitignore  README.md  metadata.d2  metadata_refactor.d2  metadata_refactor_step1.d2
doc/: Makefile
docker/: Dockerfile  app.yaml  build_deploy.py  deploy_all.sh  func.yaml
emissions_data/: Quick_plot_footprint_emissions.py
examples/: version_parameter_demo.py
hugs/: HUGS_demo.ipynb  __init__.py
modules/: _datasource.py  _instrument.py
newsfragments/: 1302.feature  README.md  example.bugfix  example.doc  example.update
object_store/: interaction.py
objectstore/: hugs_objstore.py  local_bucket.py
openghg/: __init__.py  _version.py  combine.py  db_config.toml  db_config.yaml  key_notes
processing/: TODO  _crds.py  _crds_segmentation.py  _gc.py  _gc_read.py  _metadata.py  _recombination.py  _recombine.py  _search.py  _segment.py  crds.py  crds_format.py  key_notes  recombined_data.py  segment_data.py
recipes/: build.sh  build_upload.sh  meta.yaml  upload.sh
services/: Dockerfile  app.yaml  clear_rank.py  cleardatasources.py  func.yaml  get_sources.py  jobrunner.py  listobjects.py  process.py  rank.py  rank_sources.py  retrieve.py  route.py  search.py  search_rank_sources.py  set_rank.py  testconnection.py  upload.py
test/: conftest.py
tests/: conftest.py  test_combine.py  test_hugs_objstore.py  test_proc_CRDS.py  test_process_CRDS.py  test_segment_data.py  test_store_raw_data.py
tutorials/: index.html
whatsnew/: index.html  template.html  v0.1.0.html  v0.2.0.html  v0.2.1.html  v0.3.0.html  v0.3.1.html  v0.4.0.html
(+1533 files in other folders)
