[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "openghg"
dynamic = ["version"]
description = "OpenGHG: A platform for greenhouse​ gas data analysis"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Prasad Sutar", email = "prasad.sutar@bristol.ac.uk" },
    { name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk" },
    { name = "Rachel Tunnicliffe", email = "rachel.tunnicliffe@bristol.ac.uk" },
    { name = "Gareth Jones", email = "g.m.jones@bristol.ac.uk" }
]
maintainers = [
    { name = "Prasad Sutar", email = "prasad.sutar@bristol.ac.uk" },
    { name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk" },
    { name = "Rachel Tunnicliffe", email = "rachel.tunnicliffe@bristol.ac.uk" }
]

dependencies = [
    "addict",
    "cf-xarray",
    "dask<2025.10",
    "filelock",
    "flox",
    "h5netcdf",
    "icoscp",
    "ipywidgets",
    "matplotlib",
    "msgpack",
    "nbformat",
    "numcodecs<0.16",
    "nc-time-axis",
    "netcdf4",
    "numexpr",
    "numpy>=2.0",
    "openghg-defs",
    "openpyxl",
    "pandas>=2.0",
    "pint",
    "pint-xarray",
    "plotly",
    "pyvis",
    "rapidfuzz",
    "requests>=2.25",
    "rich",
    "scipy",
    "tinydb",
    "toml",
    "urllib3>=1.26.3",
    "xarray>=2025.4.0",
    "zarr==2.18.3",
    "openghg-calscales",
    "sympy>=1.14.0",
    "networkx>=3.4.2",
    "cdsapi>=0.7.7",
]

[dependency-groups]
dev = [
    "cfchecker @ git+https://github.com/openghg/cf-checker@master#egg=cf-checker",
    "flake8",
    "pre-commit",
    "pytest >= 6.2.5",
    "pytest-tornasync",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "requests-mock",
    "tox >=4.24",
    "mypy==1.10.0",
    "types-paramiko",
    "types-PyYAML",
    "types-requests",
    "types-toml",
    "types-urllib3",
    "msgpack-types"
]
docs = [
    "Jinja2",
    "notebook",
    "nbsphinx",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-issues >= 3.0.1",
    "sphinx_rtd_theme",
    "sphinxcontrib-programoutput",
    "sphinx-autodoc-typehints",
    "sphinx_togglebutton",
    "jupyter-sp"
]

[project.optional-dependencies]
docs = [
    "Jinja2",
    "notebook",
    "nbsphinx",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-issues >= 3.0.1",
    "sphinx_rtd_theme",
    "sphinxcontrib-programoutput",
    "sphinx-autodoc-typehints",
    "sphinx_togglebutton",
    "jupyter-sphinx"
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = ["openghg*", "recipes*"]

[tool.hatch.build.targets.wheel]
include = ["openghg*", "recipes*"]

[project.urls]
Documentation = "https://www.openghg.org"
Code = "https://github.com/openghg/openghg"
Issue-Tracker = "https://github.com/openghg/openghg/issues"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[project.scripts]
openghg = "openghg.util:cli"

[tool.setuptools.package-data]
"*" = ["data/*", "data/config/objectstore/*", "py.typed"]

[tool.versioneer]
VCS = "git"
style = "pep621"
versionfile_source = "openghg/_version.py"
versionfile_build = "openghg/_version.py"
tag_prefix = ""
parentdir_prefix_version = "openghg-"

[tool.black]
line-length = 110

[tool.pytest.ini_options]
pythonpath = [
    "."
]
timeout = 300
markers = [
    "xesmf: marks tests as requiring xesmf (deselect with '-m \"not xesmf\"')"
]

[tool.uv.sources]
cfchecker = { git = "https://github.com/openghg/cf-checker", rev = "master" }
