[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "openghg"
dynamic = ["version"]
description = "OpenGHG: A platform for greenhouse​ gas data analysis"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Prasad Sutar", email = "prasad.sutar@bristol.ac.uk" },
    { name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk" },
    { name = "Rachel Tunnicliffe", email = "rachel.tunnicliffe@bristol.ac.uk" },
    { name = "Gareth Jones", email = "g.m.jones@bristol.ac.uk" }
]
maintainers = [
    { name = "Prasad Sutar", email = "prasad.sutar@bristol.ac.uk" },
    { name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk" },
    { name = "Rachel Tunnicliffe", email = "rachel.tunnicliffe@bristol.ac.uk" }
]

dependencies = [
    "addict<=2.4.0",
    "cdsapi>=0.7.7",
    "cf-xarray<=0.10.6",
    "cfchecker",
    "dask<2025.10",
    "filelock<=3.20.0",
    "flox<=0.10.4",
    "h5netcdf>=1.0.0, <=1.6.4",
    "h5py<3.15",
    "icoscp<=0.2.2",
    "ipywidgets<=8.1.7",
    "matplotlib<=3.10.7",
    "msgpack<=1.1.2",
    "msgpack-types<=0.5.0",
    "mypy==1.10.0",
    "nbformat<=5.10.4",
    "nc-time-axis<=1.4.1",
    "netcdf4>=1.6.0, <=1.7.2",
    "networkx<=3.4.2",
    "numcodecs<0.16",
    "numexpr<=2.14.1",
    "numpy>=2.0, <=2.3.3",
    "openghg-calscales<=0.1.3",
    "openghg-defs<=0.0.5",
    "openpyxl<=3.1.5",
    "pandas>=2.0, <=2.3.3",
    "pint<=0.24.4",
    "pint-xarray<=0.5.1",
    "plotly<=6.3.1",
    "pre-commit<=4.3.0",
    "pytest<=6.2.5",
    "pytest-cov<=7.0.0",
    "pytest-mock<=3.15.1",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-tornasync<=0.6.0.post2",
    "pyvis<=0.3.2",
    "rapidfuzz<=3.14.1",
    "requests<=2.25",
    "requests-mock<=1.12.1",
    "rich<=14.2.0",
    "scipy<=1.15.3",
    "sympy<=1.14.0",
    "tinydb<=4.8.2",
    "toml<=0.10.2",
    "tox<=4.24",
    "types-paramiko<=4.0.0.20250822",
    "types-pyyaml<=6.0.12.20250915",
    "types-requests<=2.32.4.20250913",
    "types-toml<=0.10.8.20240310",
    "types-urllib3",
    "urllib3>=1.26.3",
    "xarray>=2025.4.0, <=2025.9.1",
    "zarr==2.18.3",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"]
[project.optional-dependencies]
    dev = [
        "black==26.1.0",
        "flake8<=7.3.0",]
    doc = [
        "sphinx",
        "Jinja2",
        "notebook",
        "sphinxcontrib-programoutput",
        "sphinx-togglebutton",
        "sphinx_rtd_theme<3.1.0",
        "sphinx-autodoc-typehints",
        "myst-parser<=2.0.0",
        "sphinx-copybutton<=0.5.2",
        "sphinxcontrib-bibtex<=2.6.2",
        "sphinxcontrib-mermaid<=0.9.2",
        "sphinx-autobuild<=2021.3.14",
        "nbsphinx<=0.9.3",
        "ipython<=8.24.0",
        "jupyter_client<=8.6.1",
        "jupyter_core<=5.7.2",
        "jupyter-sphinx",
        "nbconvert<=7.16.4",
        "docutils<=0.20.1",
        "sphinx-issues<=3.0.1",
        "pydata-sphinx-theme<=0.15.2"
    ]

[tool.uv.sources]
cfchecker = { git = "https://github.com/openghg/cf-checker", rev = "master" }

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = ["openghg*", "recipes*"]

[tool.hatch.build.targets.wheel]
include = ["openghg*", "recipes*"]
[project.urls]
Documentation = "https://www.openghg.org"
Code = "https://github.com/openghg/openghg"
Issue-Tracker = "https://github.com/openghg/openghg/issues"

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
fallback-version = "0.0.0"

[project.scripts]
openghg = "openghg.util:cli"

[tool.setuptools.package-data]
"*" = ["data/*", "data/config/objectstore/*", "py.typed"]

[tool.versioneer]
VCS = "git"
style = "pep621"
versionfile_source = "openghg/_version.py"
versionfile_build = "openghg/_version.py"
tag_prefix = ""
parentdir_prefix_version = "openghg-"

[tool.black]
line-length = 110

[tool.pytest.ini_options]
pythonpath = [
    "."
]
timeout = 300
markers = [
    "xesmf: marks tests as requiring xesmf (deselect with '-m \"not xesmf\"')"
]
