[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "openghg"
version = "0.17.0"
description = "OpenGHG: A platform for greenhouse​ gas data analysis"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Prasad Sutar", email = "prasad.sutar@bristol.ac.uk" },
    { name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk" },
    { name = "Rachel Tunnicliffe", email = "rachel.tunnicliffe@bristol.ac.uk" },
    { name = "Gareth Jones", email = "g.m.jones@bristol.ac.uk" }
]
maintainers = [
    { name = "Prasad Sutar", email = "prasad.sutar@bristol.ac.uk" },
    { name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk" },
    { name = "Rachel Tunnicliffe", email = "rachel.tunnicliffe@bristol.ac.uk" }
]

dependencies = [
"addict",
"cf_xarray",
"dask < 2025.10",
"filelock",
"flox",
"h5netcdf >= 1.0.0, <= 1.6.4",
"h5py < 3.15",
"icoscp",
"ipywidgets",
"matplotlib >= 3.5, <= 3.10.6",
"msgpack >= 1.0, <= 1.1.1",
"nbformat",
"numcodecs < 0.16",
"nc-time-axis",
"netcdf4 >= 1.6.0, <= 1.7.2",
"numexpr",
"numpy >= 2.0, <= 2.3.3",
"openghg_defs",
"openpyxl",
"pandas >= 2.0, <= 2.3.3",
"pint",
"pint_xarray",
"plotly",
"pyvis",
"rapidfuzz",
"requests >= 2.25",
"rich >= 12.0, <= 14.1.0",
"scipy >= 1.10, <= 1.16.2",
"tinydb >= 4.0, <= 4.8.2",
"toml >= 0.10, <= 0.10.2",
"urllib3 >= 1.26.3",
"xarray >= 2025.04.0, <= 2025.9.1",
"zarr==2.18.3",
"openghg-calscales"
]

classifiers = [
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS"]

[tool.setuptools.packages.find]
include = ["openghg*", "recipes*"]

[project.urls]
Documentation = "https://www.openghg.org"
Code = "https://github.com/openghg/openghg"
Issue-Tracker = "https://github.com/openghg/openghg/issues"

[project.scripts]
openghg = "openghg.util:cli"

[tool.setuptools.package-data]
"*" = ["data/*", "data/config/objectstore/*", "py.typed"]

[tool.versioneer]
VCS = "git"
style = "pep621"
versionfile_source = "openghg/_version.py"
versionfile_build = "openghg/_version.py"
tag_prefix = ""
parentdir_prefix_version = "openghg-"

[tool.black]
line-length = 110

[tool.pytest.ini_options]
pythonpath = [
    "."
]
timeout = 300
markers = [
    "xesmf: marks tests as requiring xesmf (deselect with '-m \"not xesmf\"')"
]
