[metadata]
name = openghg
description = Cloud based greenhouse gas data analyis platform
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
author = Gareth Jones
author_email = g.m.jones@bristol.ac.uk
url = https://github.com/openghg/openghg
# download_urls = https://pypi.org/project/NOT_SET_YET
project_urls =
	Documentation = https://www.openghg.org
	Code = https://github.com/openghg/openghg
	Issue tracker = https://github.com/openghg/openghg/issues
classifiers =
	License :: OSI Approved :: Apache
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Natural Language :: English
	Operating System :: OS Independent
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[flake8]
ignore = E203, W503, E501, W291, E127, E128
exclude = openghg/interface/
max-line-length = 110
per-file-ignores =
    */__init__.py: F401
    openghg/interface/__init__.py: F401, F403
    openghg/processing/__init__.py: F401, F403

[options.packages.find]
where = openghg

[versioneer]
VCS = git
style = pep440
versionfile_source = openghg/_version.py
versionfile_build = openghg/_version.py
tag_prefix =
parentdir_prefix = openghg-